# CommsLib

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Client.hpp  Message.hpp  ReceiveStatus.hpp  Server.hpp
src/: Client.cpp  Server.cpp
tests/: clientTest.cpp  serverTest.cpp
